--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "test_demo_fi_hl": "cross-env ENV_NAME=demo npx playwright test --project=firefox",
     "test_demo_ui": "cross-env ENV_NAME=demo npx playwright test --ui",
     "test_dev_cr_hd": "cross-env ENV_NAME=demo npx playwright test --project=chromium --headed --grep=@DEV",
-    "test_uat_cr_hd": "cross-env ENV_NAME=demo npx playwright test --project=chromium --headed --grep=@UAT"
+    "test_uat_cr_hd": "cross-env ENV_NAME=demo npx playwright test --project=chromium --headed --grep=@UAT",
+    "test_demo_cr_hd_vi": "cross-env ENV_NAME=demo npx playwright test --project=chromium --headed --grep=@VISUAL",
+    "test_demo_cr_hd_lf": "cross-env ENV_NAME=demo npx playwright test --project=chromium --last-failed"
   },
   "keywords": [],
   "author": "",
